@@ -24,25 +24,10 @@ sub run {
         filename => $filename
     );
     my @methods = $ip->methods;
-    if ( @methods > 1 ) {
-        my $rows = 40;
-        my $tb   = Text::Table->new;
-        my @data;
-        for ( my $i = 0 ; $i < $rows ; $i++ ) {
-            my @arr;
-            for ( my $k = 0 ; $k < @methods ; $k++ ) {
-                push( @arr, $methods[$k] ) if ( $k % $rows == $i );
-            }
-            push( @data, \@arr );
-
-        }
-        $tb->load(@data);
-        print $tb;
-    }
-    elsif (my $method = shift @methods) {
-        print substr( $method, length $ip->prefix );
+    if(@methods) {
+    print map {$_.$/} @methods;
     } elsif (my $error = $ip->error) {
-        print "The following error occured:\n".$error;
+        print '$error$The following error occured:'.$/.$error;
     }
     return;
 
@@ -57,15 +42,30 @@ Devel::IntelliPerl::Editor::TextMate - IntelliPerl integration for TextMate
 
 =head1 SYNOPSIS
 
-    out=`perl -MDevel::IntelliPerl::Editor::TextMate -e 'run' $TM_LINE_NUMBER $TM_LINE_INDEX "$TM_FILEPATH" 2>/dev/null`
-    lines=`echo "$out" | wc -l`;
-    if (($lines > 1)); then
-      exit_show_tool_tip "$out"
-    else
-      exit_insert_text "$out"
-    fi
+    #!/usr/bin/env ruby -wKU
+    require ENV["TM_SUPPORT_PATH"] + "/lib/ui.rb"
+    require ENV["TM_SUPPORT_PATH"] + "/lib/exit_codes.rb"
 
-Create a new Command in the Bundle Editor and paste this bash script. Set "Input" to "Entire Document" and "Output" to "Discard".
+    out=`perl -MDevel::IntelliPerl::Editor::TextMate -e 'run' $TM_LINE_NUMBER $TM_LINE_INDEX "$TM_FILEPATH" 2>&1`
+
+    if /^\$error\$/.match(out) then
+      out = out.sub("$error$", "")
+      TextMate.exit_show_tool_tip out
+    end
+
+    choices = out.split("\n")
+    ENV['TM_CURRENT_WORD'] ||= ""
+
+    if choices.size == 1 then
+      print choices.first.sub(ENV['TM_CURRENT_WORD'], "")
+    else 
+      choice = TextMate::UI.menu(choices)
+      if choice then
+        print choices[choice].sub(ENV['TM_CURRENT_WORD'], "")
+      end
+    end
+
+Create a new Command in the Bundle Editor and paste this bash script. Set "Input" to B<Entire Document> and "Output" to B<Insert as Text>.
 If you set "Scope Selector" to C<source.perl> this script is run only if you are editing a perl file.
 
 To run this command using a key set "Activation" to "Key Equivalent" and type the desired key in the box next to it.
